Fixed spacing

--- a/View/CSS/mainpage-style.css
+++ b/View/CSS/mainpage-style.css
@@ -113,7 +113,7 @@
     padding: 10px 40px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 24px;
+    gap: 40px;
     width: calc(100% - 80px);
     margin-left: auto;
     margin-right: auto;
